# can2040-loopback

./: README.md  lineTransformerANSI.go
can_loopback_logged/: CMakeLists.txt  can2040.c  li.json  main.c  til.json
can_loopback_logged/trice/: trice.c  trice.h  triceConfig.h
can_loopback_unmodified/: CMakeLists.txt  can2040.c  main.c
